remove deprecated use of new URL